yamls/minio/http_route-miniofront.yaml
# httproute-minio-front.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-front-route
  namespace: integra-glpi-ns
spec:
  parentRefs:
  - name: shared-gateway
    namespace: infra-ns
  hostnames:
    - miniofront.deinfra.sc.gov.br
  rules:
#  - matches:
#    - path:
#        type: PathPrefix
#        value: /
#    filters:
#    - type: RequestRedirect
#      requestRedirect:
#        scheme: https
#        statusCode: 301
  - backendRefs:
    - name: minio-tenant-console
      port: 9090
